jrl-dynamics version 1.13 released March 12, 2009

	32. Fixed abstractRobotDynamics.pc file
	31. Removed autotools related files
	30. Install abstractRobotDynamics.doxytag
	
jrl-dynamics version 1.12 released February 27, 2009

	29. Add new methods in jrlDynamicsRobot: jointsBetween(),
	    getJacobian(), getPositionJacobian(), getOrientationJacobian().
	28. Switch from autoconf to cmake.
	27. Add forces and torques matrices.

jrl-dynamics version 1.11 released October 8, 2008

	26. Added CjrlJoint::{upper|lower}VelocityBound()

jrl-dynamics version 1.10 released April 14, 2008

	25. Removed staticState() from DynamicRobot
	24. Added missing virtual destructors.

jrl-dynamics version 1.9 released March 24, 2008

        23. Added recommended commands in dedicated page.
        22. Added methods to control implementation behavior in
            CjrlDynamicRobot:
          - virtual bool isSupported(const std::string &inProperty) = 0;
          - virtual bool getProperty(const std::string &inProperty,
                                     std::string& outValue) = 0;
          - virtual bool setProperty(std::string &inProperty,
                                     const std::string& inValue) = 0;
            Augmented documentation accordingly: a new page lists the
            recommended commands to be implemented.
        21. Added method setJointOrderInConfig in CjrlDynamicRobot.

jrl-dynamics version 1.8 released February 16, 2008

	20. Added rightHand() and lefHand() methods to CjrlHumanoidDynamicRobot
	19. Added documentation about specification of CjrlJoint.
	18. Moved dependence to MatrixAbstractionLayer to implementation.

jrl-dynamics version 1.7 released November 8, 2007

	17. Replace get function
	      virtual void gaze(const vector3d& outDirection,
				const vector3d& outOrigin) const = 0;
	    by a set function
	      virtual void gaze(const vector3d& inDirection,
				const vector3d& inOrigin) = 0;
	    that was missing.